--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,29 @@
 alembic==1.3.0
+certifi==2019.11.28
+chardet==3.0.4
 Click==7.0
 Flask==1.1.1
+flask-heroku==0.1.9
+Flask-HTTPAuth==3.2.3
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
+gunicorn==20.0.2
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
 Mako==1.1.0
 MarkupSafe==1.1.1
+passlib==1.7.1
 psycopg2-binary==2.8.4
 python-dateutil==2.8.1
 python-dotenv==0.10.3
 python-editor==1.0.4
+requests==2.22.0
 six==1.13.0
 SQLAlchemy==1.3.11
 typing==3.7.4.1
+urllib3==1.25.7
 Werkzeug==0.16.0
 WTForms==2.2.1
-Flask-HTTPAuth==3.2.3
-passlib==1.7.1
+xmltodict==0.12.0
