--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==1.1.1
 flask-heroku==0.1.9
 Flask-HTTPAuth==3.2.3
 Flask-Migrate==2.5.2
+flask-rebar==1.12.0
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
 gunicorn==20.0.2
@@ -14,7 +15,9 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 Mako==1.1.0
 MarkupSafe==1.1.1
+marshmallow==2.20.5
 passlib==1.7.1
+pep8==1.7.1
 psycopg2-binary==2.8.4
 python-dateutil==2.8.1
 python-dotenv==0.10.3
